Issue #6 : correction sur la doc sur la récupération du profile
